[gd_scene load_steps=12 format=3 uid="uid://d1648niu2f8ag"]

[ext_resource type="PackedScene" uid="uid://bq86r4yll8po" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_fullglove_low.tscn" id="1_yu5ic"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="2_2nlyf"]
[ext_resource type="PackedScene" uid="uid://xqimcf20s2jp" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_fullglove_low.tscn" id="2_ojcpv"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="3_rhvbn"]
[ext_resource type="PackedScene" uid="uid://kyhaogt0a4q8" path="res://addons/godot-xr-tools/functions/movement_flight.tscn" id="4_o2y4m"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="4_rhvbn"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="7_nkf4f"]
[ext_resource type="Script" uid="uid://ki2nby8m7j4b" path="res://ray_cast_3d.gd" id="7_o2y4m"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nkf4f"]
direction = Vector3(0, 0, -1)
spread = 0.0
initial_velocity_min = 15.0
initial_velocity_max = 30.0
gravity = Vector3(0, -2, 0)
damping_min = 0.1
damping_max = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u055a"]
albedo_color = Color(0, 0.34117648, 1, 1)
refraction_enabled = true

[sub_resource type="SphereMesh" id="SphereMesh_kmt6x"]
material = SubResource("StandardMaterial3D_u055a")
radius = 0.25
height = 0.5

[node name="XROrigin3D" type="XROrigin3D"]
current = true

[node name="XRCamera3D" type="XRCamera3D" parent="."]

[node name="LeftHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0, 0)
tracker = &"left_hand"

[node name="LeftHand2" parent="LeftHand" instance=ExtResource("1_yu5ic")]

[node name="MovementDirect" parent="LeftHand/LeftHand2" instance=ExtResource("2_2nlyf")]
strafe = true

[node name="FunctionPickup" parent="LeftHand/LeftHand2" instance=ExtResource("3_rhvbn")]

[node name="MovementFlight" parent="LeftHand/LeftHand2" instance=ExtResource("4_o2y4m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, 0)
speed_scale = 10.0

[node name="RightHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0, 0)
tracker = &"right_hand"

[node name="RightHand2" parent="RightHand" instance=ExtResource("2_ojcpv")]

[node name="MovementTurn" parent="RightHand/RightHand2" instance=ExtResource("4_rhvbn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0, 0)
step_turn_angle = 45.0

[node name="FunctionPickup" parent="RightHand/RightHand2" instance=ExtResource("3_rhvbn")]

[node name="WaterParticles" type="GPUParticles3D" parent="RightHand/RightHand2"]
emitting = false
amount = 1000
lifetime = 5.0
process_material = SubResource("ParticleProcessMaterial_nkf4f")
draw_pass_1 = SubResource("SphereMesh_kmt6x")

[node name="RayCast3D" type="RayCast3D" parent="RightHand/RightHand2"]
transform = Transform3D(1, 0, 0, 0, -8.742278e-07, -1, 0, 20, -4.371139e-08, 0, 0, 0)
script = ExtResource("7_o2y4m")

[node name="Debounce_Timer" type="Timer" parent="RightHand/RightHand2/RayCast3D"]

[node name="@CharacterBody3D@57225" parent="." instance=ExtResource("7_nkf4f")]

[connection signal="timeout" from="RightHand/RightHand2/RayCast3D/Debounce_Timer" to="RightHand/RightHand2/RayCast3D" method="_on_debounce_timer_timeout"]
